css/style.css
@font-face {
    font-family: 'NotoSans';
    src: url('../fonts/NotoSans-Regular.ttf');
}

:root {
    --bg: #121212;
    --fg: #f2f2f2;
    --nav-color: #d9d9d9;
}

html {
    font-family: 'NotoSans';
    background-color: var(--bg);
    color: var(--fg);
}

footer {
    height: 40vh;
    background-color: #1a1a1a;
}

p {
    text-align: justify;
}

#title {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.citation {
    font-family: 'Times New Roman', Times, serif;
    text-align: left;
}

.container {
    margin-top: 5em;
    width: 50%;
    left: 25%;
}

.img-banner {
    width: 100%;
    height: 500px;
    object-fit: cover;
    object-position: 0% 45%;
    margin: 0;
}

#author-line {
    text-align: center;
}

